--- a/css/main.css
+++ b/css/main.css
@@ -1514,11 +1514,11 @@ template {
 
 .tree {
   position: relative;
-  width: 94%;
+  width: 100%;
   padding-top: 1.875rem;
   display: flex;
+  justify-content: flex-end;
   order: -1;
-  margin-left: auto;
 }
 
 .tree .tree-img {
